k8s-manifests/service-a.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-a
  name: a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - image: sample/service-a
        name: service-a
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 256Mi
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 20
          successThreshold: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-a
    service: "true"
  name: a
spec:
  ports:
  - name: 80-8081
    port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: service-a
