k8s-manifests/service-b.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-b
  name: b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - image: sample/service-b
        name: service-b
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 256Mi
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8082
            scheme: HTTP
          initialDelaySeconds: 20
          successThreshold: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8082
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-b
    service: "true"
  name: b
spec:
  ports:
  - name: 80-8082
    port: 80
    protocol: TCP
    targetPort: 8082
  selector:
    app: service-b
