k8s-manifests/service-c.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-c
  name: c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
    spec:
      containers:
      - image: sample/service-c
        name: service-c
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 256Mi
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8083
            scheme: HTTP
          initialDelaySeconds: 20
          successThreshold: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8083
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-c
  name: b
spec:
  ports:
  - name: 80-8083
    port: 80
    protocol: TCP
    targetPort: 8083
  selector:
    app: service-c
