k8s-manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "sample.test"
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: ui
              servicePort: 80
    - host: "keycloak.sample.test"
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: keycloak
              servicePort: 80
    - host: "gateway.sample.test"
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: gateway
              servicePort: 80
    - host: "prometheus.sample.test"
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: prometheus
              servicePort: 80
    - host: "grafana.sample.test"
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: grafana
              servicePort: 80
